# rstube

./: Cargo.toml  Dockerfile  README.md  config.yml
src/: config.rs  main.rs  routes.rs  ytdlp.rs
templates/: error.html  index.html
