[package]
name = "rstube"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Lorenzo Carbonell <lorenzo.carbonell.cerezo@gmail.com>"]
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21", features = ["full"]}
actix-web = "4"
actix-web-lab = "0.18"
actix-web-httpauth = "0.8"
actix-files = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.9"
log = "0.4"
serde_yaml = "0.9"
reqwest = "0.11"
actix-rt = "2.7"
openssl = { version = "0.10", features = ["vendored"] }
tera  = "1.17"
md5 = "0.7"
